Minor changes
- add Error model and 400 status response
- add Recover middleware
- add context.Kind field and Stringer interface for rkind
- add router.Poll and router.ServeHTTP methods
