# models/error.go
@@ -1,0 +1,34 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+)
+
+// Error error
+// swagger:model Error
+type Error struct {
+
+	// description
+	Description string `json:"description,omitempty"`
+
+	// error code
+	ErrorCode int64 `json:"error_code,omitempty"`
+
+	// ok
+	Ok bool `json:"ok,omitempty"`
+}
+
+// Validate validates this error
+func (m *Error) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
